--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Arquivos de segredos e variáveis de ambiente
+.env
+.env.*
+config.ini
+secrets.yml
